# Detection-and-classification-LIDAR

./: README.md
detection_classification/: CMakeLists.txt  package.xml
detection_classification/include/: box_fitting.h  clustering.h  gaussian_blur.h  ground_removal.h  imm_ukf_jpda.h  trackbox.h  ukf.h
detection_classification/src/Detecter/cluster/: box_fitting.cpp  clustering.cpp  main.cpp
detection_classification/src/Detecter/ground_rmv/: gaussian_blur.cpp  ground_removal.cpp  main.cpp
detection_classification/src/Tracker/: imm_ukf_jpda.cpp  main.cpp  ukf.cpp
